--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=9000
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb+srv://jelufe:uIRx7pd6ObKWch2L@cluster0.ka343bi.mongodb.net/
+SECRET_KEY=golang-secret-key
