--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT=9000
 MONGODB_URL=mongodb://admin:admin@localhost:27017
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_DB_NAME=varejao
 SECRET_KEY=golang-secret-key
