--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=9000
 MONGODB_URL=mongodb://admin:admin@localhost:27017
+MYSQL_URL=admin:admin@tcp(localhost:3306)/admin
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=admin
