--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql
     environment:
     - MYSQL_ROOT_PASSWORD=admin
-    - MYSQL_DATABASE=admin
+    - MYSQL_DATABASE=macapa
     - MYSQL_USER=admin
     - MYSQL_PASSWORD=admin
     - MYSQL_ROOT_HOST=%
